<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


   <TextView
       android:id="@+id/nameLabelTextView"
       style="@style/ContactLabelTextView"
       android:layout_width="wrap_content"
       android:layout_height="37dp"
       android:layout_marginStart="10dp"
       android:layout_marginTop="24dp"
       android:background="#fff"
       android:text="@string/label_name"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:layout_conversion_absoluteHeight="19dp"
       tools:layout_conversion_absoluteWidth="41dp" />

   <TextView
       android:id="@+id/nameTextView"
       style="@style/ContactTextView"
       android:layout_width="304dp"
       android:layout_height="37dp"
       android:layout_marginStart="5dp"
       android:layout_marginTop="24dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.46"
       app:layout_constraintStart_toEndOf="@+id/nameLabelTextView"
       app:layout_constraintTop_toTopOf="parent"
       tools:layout_conversion_absoluteHeight="42dp"
       tools:layout_conversion_absoluteWidth="353dp" />

   <TextView
       android:id="@+id/phoneLabelTextView"
       style="@style/ContactLabelTextView"
       android:layout_width="wrap_content"
       android:layout_height="37dp"
       android:layout_marginStart="10dp"
       android:layout_marginTop="24dp"
       android:text="@string/label_phone"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/nameLabelTextView"
       tools:layout_conversion_absoluteHeight="19dp"
       tools:layout_conversion_absoluteWidth="43dp" />

   <TextView
       android:id="@+id/phoneTextView"
       style="@style/ContactTextView"
       android:layout_width="304dp"
       android:layout_height="37dp"
       android:layout_marginStart="5dp"
       android:layout_marginTop="24dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/phoneLabelTextView"
       app:layout_constraintTop_toBottomOf="@+id/nameTextView"
       tools:layout_conversion_absoluteHeight="42dp"
       tools:layout_conversion_absoluteWidth="353dp" />

   <TextView
       android:id="@+id/emailLabelTextView"
       style="@style/ContactLabelTextView"
       android:layout_width="wrap_content"
       android:layout_height="37dp"
       android:layout_marginStart="10dp"
       android:layout_marginTop="24dp"
       android:text="@string/label_email"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/phoneLabelTextView"
       tools:layout_conversion_absoluteHeight="19dp"
       tools:layout_conversion_absoluteWidth="42dp" />

   <TextView
       android:id="@+id/emailTextView"
       style="@style/ContactTextView"
       android:layout_width="304dp"
       android:layout_height="37dp"
       android:layout_marginStart="5dp"
       android:layout_marginTop="24dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/emailLabelTextView"
       app:layout_constraintTop_toBottomOf="@+id/phoneTextView"
       tools:layout_conversion_absoluteHeight="42dp"
       tools:layout_conversion_absoluteWidth="353dp" />

   <TextView
       android:id="@+id/streetLabelTextView"
       style="@style/ContactLabelTextView"
       android:layout_width="wrap_content"
       android:layout_height="37dp"
       android:layout_marginStart="10dp"
       android:layout_marginTop="24dp"
       android:text="@string/label_street"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/emailLabelTextView"
       tools:layout_conversion_absoluteHeight="19dp"
       tools:layout_conversion_absoluteWidth="41dp" />

   <TextView
       android:id="@+id/streetTextView"
       style="@style/ContactTextView"
       android:layout_width="304dp"
       android:layout_height="37dp"
       android:layout_marginStart="5dp"
       android:layout_marginTop="24dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/streetLabelTextView"
       app:layout_constraintTop_toBottomOf="@+id/emailTextView"
       tools:layout_conversion_absoluteHeight="42dp"
       tools:layout_conversion_absoluteWidth="353dp" />

   <TextView
       android:id="@+id/cityLabelTextView"
       style="@style/ContactLabelTextView"
       android:layout_width="34dp"
       android:layout_height="37dp"
       android:layout_marginStart="10dp"
       android:layout_marginTop="24dp"
       android:text="@string/label_city"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/streetLabelTextView"
       tools:layout_conversion_absoluteHeight="19dp"
       tools:layout_conversion_absoluteWidth="27dp" />

   <TextView
       android:id="@+id/cityTextView"
       style="@style/ContactTextView"
       android:layout_width="304dp"
       android:layout_height="37dp"
       android:layout_marginStart="5dp"
       android:layout_marginTop="24dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/cityLabelTextView"
       app:layout_constraintTop_toBottomOf="@+id/streetTextView"
       tools:layout_conversion_absoluteHeight="42dp"
       tools:layout_conversion_absoluteWidth="353dp" />

   <TextView
       android:id="@+id/stateLabelTextView"
       style="@style/ContactLabelTextView"
       android:layout_width="wrap_content"
       android:layout_height="37dp"
       android:layout_marginStart="10dp"
       android:layout_marginTop="24dp"
       android:text="@string/label_state"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/cityLabelTextView"
       tools:layout_conversion_absoluteHeight="19dp"
       tools:layout_conversion_absoluteWidth="36dp" />

   <TextView
       android:id="@+id/stateTextView"
       style="@style/ContactTextView"
       android:layout_width="304dp"
       android:layout_height="37dp"
       android:layout_marginStart="5dp"
       android:layout_marginTop="24dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/stateLabelTextView"
       app:layout_constraintTop_toBottomOf="@+id/cityTextView"
       tools:layout_conversion_absoluteHeight="42dp"
       tools:layout_conversion_absoluteWidth="353dp" />

   <TextView
       android:id="@+id/zipLabelTextView"
       style="@style/ContactLabelTextView"
       android:layout_width="39dp"
       android:layout_height="37dp"
       android:layout_marginStart="10dp"
       android:layout_marginTop="24dp"
       android:text="@string/label_zip"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/stateLabelTextView"
       tools:layout_conversion_absoluteHeight="19dp"
       tools:layout_conversion_absoluteWidth="23dp" />

   <TextView
       android:id="@+id/zipTextView"
       style="@style/ContactTextView"
       android:layout_width="304dp"
       android:layout_height="37dp"
       android:layout_marginStart="5dp"
       android:layout_marginTop="24dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/zipLabelTextView"
       app:layout_constraintTop_toBottomOf="@+id/stateTextView"
       tools:layout_conversion_absoluteHeight="42dp"
       tools:layout_conversion_absoluteWidth="353dp" />

</android.support.constraint.ConstraintLayout>